--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -1308,4 +1308,16 @@
     <data name="TITLE_REMOVE_RELATIONSHIP" xml:space="preserve">
         <value>Créer une relation</value>
     </data>
+    <data name="TEXT_TERMINATE" xml:space="preserve">
+    <value>Terminate</value>
+  </data>
+  <data name="TEXT_TERMINATE_SELECTED_ROWS" xml:space="preserve">
+    <value>Are you sure you want to terminate selected rows?</value>
+  </data>
+  <data name="TEXT_UPDATE_ACS_MESSAGE" xml:space="preserve">
+    <value>Are you sure that you want to update OnBoard template?</value>
+  </data>
+  <data name="TEXT_TERMINATE_MESSAGE" xml:space="preserve">
+    <value>Are you sure you want to terminate {0}?</value>
+  </data>
 </root>
