--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es.resx
@@ -297,4 +297,19 @@
   <data name="DATE_FORMAT_JS" xml:space="preserve">
     <value>%d/%m/%Y %X</value>
   </data>
+  <data name="TEXT_TYPE_EOM" xml:space="preserve">
+    <value>{es}EOM</value>
+  </data>
+  <data name="TEXT_TYPE_M12" xml:space="preserve">
+    <value>{es}M12</value>
+  </data>
+  <data name="TEXT_TYPE_M19" xml:space="preserve">
+    <value>{es}M19</value>
+  </data>
+  <data name="TEXT_TYPE_M26" xml:space="preserve">
+    <value>{es}M26</value>
+  </data>
+  <data name="TEXT_TYPE_M5" xml:space="preserve">
+    <value>{es}M5</value>
+  </data>    
 </root>
