--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
@@ -297,4 +297,19 @@
     <data name="TEXT_WAITING" xml:space="preserve">
         <value>En attente</value>
     </data>
+  <data name="TEXT_TYPE_EOM" xml:space="preserve">
+    <value>{fr}EOM</value>
+  </data>
+  <data name="TEXT_TYPE_M12" xml:space="preserve">
+    <value>{fr}M12</value>
+  </data>
+  <data name="TEXT_TYPE_M19" xml:space="preserve">
+    <value>{fr}M19</value>
+  </data>
+  <data name="TEXT_TYPE_M26" xml:space="preserve">
+    <value>{fr}M26</value>
+  </data>
+  <data name="TEXT_TYPE_M5" xml:space="preserve">
+    <value>{fr}M5</value>
+  </data>      
 </root>
