--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
@@ -297,4 +297,19 @@
   <data name="DATE_FORMAT_JS" xml:space="preserve">
     <value>%Y/%m/%d %X</value>
   </data>
+  <data name="TEXT_TYPE_EOM" xml:space="preserve">
+    <value>{ja}EOM</value>
+  </data>
+  <data name="TEXT_TYPE_M12" xml:space="preserve">
+    <value>{ja}M12</value>
+  </data>
+  <data name="TEXT_TYPE_M19" xml:space="preserve">
+    <value>{ja}M19</value>
+  </data>
+  <data name="TEXT_TYPE_M26" xml:space="preserve">
+    <value>{ja}M26</value>
+  </data>
+  <data name="TEXT_TYPE_M5" xml:space="preserve">
+    <value>{ja}M5</value>
+  </data>    
 </root>
