--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
@@ -297,4 +297,19 @@
     <data name="TEXT_WAITING" xml:space="preserve">
         <value>Aguardando</value>
     </data>
+  <data name="TEXT_TYPE_EOM" xml:space="preserve">
+    <value>{br}EOM</value>
+  </data>
+  <data name="TEXT_TYPE_M12" xml:space="preserve">
+    <value>{br}M12</value>
+  </data>
+  <data name="TEXT_TYPE_M19" xml:space="preserve">
+    <value>{br}M19</value>
+  </data>
+  <data name="TEXT_TYPE_M26" xml:space="preserve">
+    <value>{br}M26</value>
+  </data>
+  <data name="TEXT_TYPE_M5" xml:space="preserve">
+    <value>{br}M5</value>
+  </data>      
 </root>
