--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
@@ -297,4 +297,18 @@
     <data name="TEXT_WAITING" xml:space="preserve">
         <value>Waiting</value>
     </data>
-</root>
+  <data name="TEXT_TYPE_EOM" xml:space="preserve">
+    <value>EOM</value>
+  </data>
+  <data name="TEXT_TYPE_M12" xml:space="preserve">
+    <value>M12</value>
+  </data>
+  <data name="TEXT_TYPE_M19" xml:space="preserve">
+    <value>M19</value>
+  </data>
+  <data name="TEXT_TYPE_M26" xml:space="preserve">
+    <value>M26</value>
+  </data>
+  <data name="TEXT_TYPE_M5" xml:space="preserve">
+    <value>M5</value>
+  </data></root>
