--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -1312,7 +1312,7 @@
     <value>Recent Notifications</value>
   </data>
   <data name="SUBSCRIPTION_ENDING_TEMPLATE" xml:space="preserve">
-    <value>Account {varloginname} has subscription to {varpointernalname} that will end on {varenddate}<![CDATA[<a style='cursor:hand;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'>View...</a>]]></value>
+    <value>[IT]Account {varloginname} has subscription to {varpointernalname} that will end on {varenddate}<![CDATA[<a style='cursor:hand;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'>View...</a>]]></value>
   </data>
   <data name="GROUP_SUBSCRIPTION_ENDING_TEMPLATE" xml:space="preserve">
     <value>[IT]Account {varloginname} participation in subscription to {varpointernalname} will end on {varenddate} <![CDATA[<a style='cursor:hand;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'>View...</a>]]></value>
