--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
@@ -238,19 +238,19 @@
     <value>[DE]Duration</value>
   </data>
   <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
-    <value>[DE]Earliest ETA</value>
+    <value>[DE]Earliest ETA:</value>
   </data>
   <data name="TEXT_READY" xml:space="preserve">
-    <value>[DE]Ready</value>
+    <value>[DE]Ready:</value>
   </data>
   <data name="TEXT_SUCCESSFUL" xml:space="preserve">
-    <value>[DE]Successful</value>
+    <value>[DE]Successful:</value>
   </data>
   <data name="TEXT_VARIANCE" xml:space="preserve">
-    <value>[DE]Variance</value>
+    <value>[DE]Variance:</value>
   </data>
   <data name="TEXT_WAITING" xml:space="preserve">
-    <value>[DE]Waiting</value>
+    <value>[DE]Waiting:</value>
   </data>
   <data name="lblBillCloseSynopisBillGroupsResource.Text" xml:space="preserve">
     <value>[DE]Bill Groups:</value>
