--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
@@ -238,19 +238,19 @@
     <value>Duration</value>
   </data>
   <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
-    <value>Earliest ETA</value>
+    <value>Earliest ETA:</value>
   </data>
   <data name="TEXT_READY" xml:space="preserve">
-    <value>Ready</value>
+    <value>Ready:</value>
   </data>
   <data name="TEXT_SUCCESSFUL" xml:space="preserve">
-    <value>Successful</value>
+    <value>Successful:</value>
   </data>
   <data name="TEXT_VARIANCE" xml:space="preserve">
-    <value>Variance</value>
+    <value>Variance:</value>
   </data>
   <data name="TEXT_WAITING" xml:space="preserve">
-    <value>Waiting</value>
+    <value>Waiting:</value>
   </data>
   <data name="lblBillCloseSynopisBillGroupsResource.Text" xml:space="preserve">
     <value>Bill Groups:</value>
