--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
@@ -211,7 +211,7 @@
         <value>Duração</value>
     </data>
     <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
-        <value>Primeiro ETA</value>
+        <value>Primeiro ETA:</value>
     </data>
     <data name="TEXT_END" xml:space="preserve">
         <value>Término</value>
@@ -259,7 +259,7 @@
         <value>Fila RAMP</value>
     </data>
     <data name="TEXT_READY" xml:space="preserve">
-        <value>Pronto</value>
+        <value>Pronto:</value>
     </data>
     <data name="TEXT_SCHEDULER_QUEUE" xml:space="preserve">
         <value>Fila do agendador</value>
@@ -277,7 +277,7 @@
         <value>Estado</value>
     </data>
     <data name="TEXT_SUCCESSFUL" xml:space="preserve">
-        <value>Sucesso</value>
+        <value>Sucesso:</value>
     </data>
     <data name="TEXT_TASKS_WAITING_TO_BE_PROCESSED" xml:space="preserve">
         <value>tarefas aguardando processamento</value>
@@ -292,10 +292,10 @@
         <value>Não guiado</value>
     </data>
     <data name="TEXT_VARIANCE" xml:space="preserve">
-        <value>Variância</value>
+        <value>Variância:</value>
     </data>
     <data name="TEXT_WAITING" xml:space="preserve">
-        <value>Aguardando</value>
+        <value>Aguardando:</value>
     </data>
   <data name="TEXT_TYPE_EOM" xml:space="preserve">
     <value>{br}EOM</value>
