--- a/Localization/Global/GlobalResources.es.resx
+++ b/Localization/Global/GlobalResources.es.resx
@@ -258,6 +258,9 @@
     <data name="ACS_VALIDATION_IdPartitionCorporateAccIsNotTheSameAsPo" xml:space="preserve">
         <value>[ES]ID Partition for Corporate Account with ID = '{0}' Is no the same as for '{1}' product offering. The ID Partition for Account = '{2}', but for product offering = '{3}'</value>
     </data>
+    <data name="ACS_VALIDATION_INVALID_RANK_VALUE" xml:space="preserve">
+        <value>[ES]Rank should be &gt; 0. Rank value: {0}.</value>
+    </data>
     <data name="ACS_VALIDATION_MandatoryProperty_CantBeEmptyOrNull" xml:space="preserve">
         <value>[ES] The mandatory '{0}' property can't be empty or null. </value>
     </data>
