FEAT-4853 As a MN user I'd like to have ability to add Subscription Parameters to the new Account Configuration Sets in the system from UI FEAT-4805 [DEV] Create of the screen to select SubscriptionParameters for the AccountConfigSet

--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -677,5 +677,11 @@
   </data>
   <data name="TEXT_SEARCH" xml:space="preserve">
     <value>Search</value>
+    <data name="TEXT_CREATE_ACS" xml:space="preserve">
+    <value>Add OnBoard Template</value>
+  </data>
+  <data name="TEXT_AccountConfigSetsSubParams_LIST" xml:space="preserve">
+    <value>Sub. Params For OnBoard Templates</value>
+  </data>
   </data>
 </root>
