--- a/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
+++ b/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
@@ -260,10 +260,7 @@
   </data>
   <data name="ADD_PROPERTY_TO_SET" xml:space="preserve">
     <value>Add Property To Set</value>
-  </data>
-  <data name="EDIT_PROPERTY_TO_SET" xml:space="preserve">
-    <value>Edit Property To Set</value>
-  </data>
+  </data>  
   <data name="ADD_SELECTION_CRITERIA" xml:space="preserve">
     <value>Add Selection Criteria</value>
   </data>
@@ -282,5 +279,17 @@
   <data name="TEXT_WRONG_INPUT" xml:space="preserve">
     <value>Most likely length of value more then availible for selected property</value>
   </data>
-  
+  <data name="panelManageSubscriptionParametersResource.Text" xml:space="preserve">
+    <value>Manage Subscription Parameters For OnBoard Template</value>
+  </data>
+  <data name="btnSelectSubParamsResource.Text" xml:space="preserve">
+    <value>Select</value>
+  </data>
+  <data name="btnRemoveSubParamsResource.Text" xml:space="preserve">
+    <value>Remove</value>
+  </data>
+  <data name="SELECT_SUBPARAMS" xml:space="preserve">
+    <value>Select Subscription Parameters</value>
+  </data>
+
 </root>
