--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -682,6 +682,12 @@
     <value>Manage OnBoard Templates</value>
   </data>
   <data name="TEXT_AccountConfigSets_LIST" xml:space="preserve">
-    <value>OnBoard Templates List</value>
+    <value>OnBoard Templates</value>
+  </data>
+  <data name="TEXT_CREATE_ACS" xml:space="preserve">
+    <value>Add OnBoard Template</value>
+  </data>
+  <data name="TEXT_AccountConfigSetsSubParams_LIST" xml:space="preserve">
+    <value>Sub. Params For OnBoard Templates</value>
   </data>
 </root>
