CORE-8745:"[FEAT-4550] Not updated name and description of 'Manage Account Configuration Set' capability is displayed" Rename capability to mach requirements Code Reviewer: YZapara
Conflicts:
	Source/MetraTech/Core/Services/AccountConfigurationSetService.cs
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.en-GB.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.es-MX.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.es.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.fr.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.it.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.ja.resx
	Source/MetraTech/UI/MetraNet/App_GlobalResources/MainMenu.pt-br.resx
	Source/MetraTech/UI/MetraNet/Config/Menus/MetraCareMenu.xml

--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -684,4 +684,10 @@
     <value>Sub. Params For OnBoard Templates</value>
   </data>
   </data>
+  <data name="TEXT_AccountConfigSets" xml:space="preserve">
+    <value>[DE]Manage OnBoard Templates</value>
+  </data>
+  <data name="TEXT_AccountConfigSets_LIST" xml:space="preserve">
+    <value>[DE]OnBoard Templates List</value>
+  </data>
 </root>
