--- a/App_GlobalResources/MainMenu.es-MX.resx
+++ b/App_GlobalResources/MainMenu.es-MX.resx
@@ -684,4 +684,10 @@
   <data name="TEXT_AccountConfigSetsSubParams_LIST" xml:space="preserve">
     <value>Sub. Params For OnBoard Templates</value>
   </data>
+  <data name="TEXT_AccountConfigSets" xml:space="preserve">
+    <value>[es-MX]Manage OnBoard Templates</value>
+  </data>
+  <data name="TEXT_AccountConfigSets_LIST" xml:space="preserve">
+    <value>[es-MX]OnBoard Templates List</value>
+  </data>
 </root>
