--- a/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
+++ b/AccountConfigSets/App_LocalResources/ManageAccountConfigSet.aspx.resx
@@ -171,10 +171,10 @@
   <data name="USERNAME" xml:space="preserve">
     <value>User Name</value>
   </data>
-  <data name="dpSubParamsEndDateResource.Text" xml:space="preserve">
+  <data name="dpSubParamsEndDateResource.Label" xml:space="preserve">
     <value>Subscription End Date</value>
   </data>
-  <data name="dpSubParamsStartDateResource.Text" xml:space="preserve">
+  <data name="dpSubParamsStartDateResource.Label" xml:space="preserve">
     <value>Subscription Start Date</value>
   </data>
   <data name="tbSubParamsDescriptionResource.Label" xml:space="preserve">
@@ -217,7 +217,7 @@
     <value>Template Selection Criteria and Properties For Modification Parameters</value>
   </data>
   <data name="panelSubscriptionParametersResource.Text" xml:space="preserve">
-    <value>Template Subscription Parameters</value>
+    <value>Template Subscription Parameters Details</value>
   </data>
   <data name="tbGroupSubscriptionNameResource.Label" xml:space="preserve">
     <value>Group Subscription Name</value>
@@ -260,7 +260,7 @@
   </data>
   <data name="ADD_PROPERTY_TO_SET" xml:space="preserve">
     <value>Add Property To Set</value>
-  </data>  
+  </data>
   <data name="ADD_SELECTION_CRITERIA" xml:space="preserve">
     <value>Add Selection Criteria</value>
   </data>
@@ -277,19 +277,18 @@
     <value>Failed. Wrong input!</value>
   </data>
   <data name="TEXT_WRONG_INPUT" xml:space="preserve">
-    <value>Most likely length of value more then availible for selected property</value>
+    <value>Most likely length of the value more than available for the selected property</value>
   </data>
   <data name="panelManageSubscriptionParametersResource.Text" xml:space="preserve">
     <value>Manage Subscription Parameters For OnBoard Template</value>
   </data>
   <data name="btnSelectSubParamsResource.Text" xml:space="preserve">
-    <value>Select</value>
+    <value>Select Subscription Params</value>
   </data>
   <data name="btnRemoveSubParamsResource.Text" xml:space="preserve">
-    <value>Remove</value>
+    <value>Remove Subscription Params</value>
   </data>
   <data name="SELECT_SUBPARAMS" xml:space="preserve">
     <value>Select Subscription Parameters</value>
   </data>
-
 </root>
