CORE-8763 [FEAT-4846] UI issues
Code reviewer: dgaz

--- a/Notifications/App_LocalResources/Notifications.aspx.de.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.de.resx
@@ -121,7 +121,7 @@
     <value>[DE]Date</value>
   </data>
   <data name="TEXT_NOTIFICATIONS_EVENT_TYPE" xml:space="preserve">
-    <value>[DE]Notifications event type</value>
+    <value>[DE]Type</value>
   </data>
   <data name="TEXT_NOTIFICATION_BODY" xml:space="preserve">
     <value>[DE]Notification</value>
