--- a/Notifications/App_LocalResources/Notifications.aspx.en-GB.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.en-GB.resx
@@ -121,7 +121,7 @@
     <value>Date</value>
   </data>
   <data name="TEXT_NOTIFICATIONS_EVENT_TYPE" xml:space="preserve">
-    <value>Notifications event type</value>
+    <value>Type</value>
   </data>
   <data name="TEXT_NOTIFICATION_BODY" xml:space="preserve">
     <value>Notification</value>
