--- a/Notifications/App_LocalResources/Notifications.aspx.es-MX.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.es-MX.resx
@@ -121,7 +121,7 @@
     <value>[es-MX]Date</value>
   </data>
   <data name="TEXT_NOTIFICATIONS_EVENT_TYPE" xml:space="preserve">
-    <value>[es-MX]Notifications event type</value>
+    <value>[es-MX]Type</value>
   </data>
   <data name="TEXT_NOTIFICATION_BODY" xml:space="preserve">
     <value>[es-MX]Notification</value>
