--- a/Notifications/App_LocalResources/Notifications.aspx.it.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.it.resx
@@ -121,7 +121,7 @@
     <value>[IT]Date</value>
   </data>
   <data name="TEXT_NOTIFICATIONS_EVENT_TYPE" xml:space="preserve">
-    <value>[IT]Notifications event type</value>
+    <value>[IT]Type</value>
   </data>
   <data name="TEXT_NOTIFICATION_BODY" xml:space="preserve">
     <value>[IT]Notification</value>
