CORE-8763 [FEAT-4846] UI issues
Code reviewer: dgaz

--- a/App_GlobalResources/JSConsts.es-MX.resx
+++ b/App_GlobalResources/JSConsts.es-MX.resx
@@ -1312,10 +1312,10 @@
     <value>Recent Notifications</value>
   </data>
   <data name="SUBSCRIPTION_ENDING_TEMPLATE" xml:space="preserve">
-    <value>[es-MX]Account {varloginname} has subscription to {varpointernalname} that will end on {varenddate}<![CDATA[<a style='cursor:hand;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'>View...</a>]]></value>
+    <value>[es-MX]Account {varloginname} has subscription to {varpointernalname} that will end on {varenddate}&lt;a style='cursor: pointer;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'&gt;View...&lt;/a&gt;</value>
   </data>
   <data name="GROUP_SUBSCRIPTION_ENDING_TEMPLATE" xml:space="preserve">
-    <value>[es-MX]Account {varloginname} participation in subscription to {varpointernalname} will end on {varenddate} <![CDATA[<a style='cursor:hand;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'>View...</a>]]></value>
+    <value>[es-MX]Account {varloginname} participation in subscription to {varpointernalname} will end on {varenddate} &lt;a style='cursor: pointer;' id='manage1_{varaccount}' href='JavaScript:getFrameMetraNet().Account.Load({varaccount});'&gt;View...&lt;/a&gt;</value>
   </data>
   <data name="TEXT_CHANGE_PASSWORD" xml:space="preserve">
     <value>{es-MX}Change Password</value>
@@ -1329,5 +1329,4 @@
   <data name="TEXT_MORE" xml:space="preserve">
     <value>[es-MX]More ...</value>
   </data>
-
 </root>
