CORE-8766: [FEAT-4846] Partition drop-down issues. Adding resource files

--- a/Notifications/App_LocalResources/Notifications.aspx.es.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.es.resx
@@ -132,4 +132,7 @@
   <data name="TEXT_PARTITION" xml:space="preserve">
     <value>[ES]Partition</value>
   </data>
+  <data name="TEXT_PARTITION_ID" xml:space="preserve">
+    <value>[ES]Partition ID</value>
+  </data>
 </root>
