--- a/Notifications/App_LocalResources/Notifications.aspx.en-GB.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.en-GB.resx
@@ -132,4 +132,7 @@
   <data name="TEXT_PARTITION" xml:space="preserve">
     <value>Partition</value>
   </data>
+  <data name="TEXT_PARTITION_ID" xml:space="preserve">
+    <value>Partition ID</value>
+  </data>
 </root>
