--- a/Notifications/App_LocalResources/Notifications.aspx.fr.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.fr.resx
@@ -132,4 +132,7 @@
   <data name="TEXT_PARTITION" xml:space="preserve">
     <value>[FR]Partition</value>
   </data>
+  <data name="TEXT_PARTITION_ID" xml:space="preserve">
+    <value>[FR]Partition ID</value>
+  </data>
 </root>
