--- a/Notifications/App_LocalResources/Notifications.aspx.pt-BR.resx
+++ b/Notifications/App_LocalResources/Notifications.aspx.pt-BR.resx
@@ -132,4 +132,7 @@
   <data name="TEXT_PARTITION" xml:space="preserve">
     <value>[pt-BR]Partition</value>
   </data>
+  <data name="TEXT_PARTITION_ID" xml:space="preserve">
+    <value>[pt-BR]Partition ID</value>
+  </data>
 </root>
